mdapi/objects/Overview_Budget_per_Anno__c/Overview_Budget_per_Anno__c.object-meta.xml
<CustomObject>
    <label>Budget per Anno</label>
    <nameField>
        <label>Codice</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Budget per Anno</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>