mdapi/objects/Overview_Budget_per_Anno__c/fields/Ammontare_Pagamenti_Da_Pagare_formula__c.field-meta.xml
<CustomField>
    <fullName>Ammontare_Pagamenti_Da_Pagare_formula__c</fullName>
    <formula>Totali_Budget_Anno__r.Ammontare_Pagamenti_Da_Pagare__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ammontare Pagamenti Da Pagare</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>