mdapi/objects/Overview_Budget_per_Anno__c/fields/Ammontare_Pagamenti_Fatti__c.field-meta.xml
<CustomField>
    <fullName>Ammontare_Pagamenti_Fatti__c</fullName>
    <label>Ammontare Pagamenti Fatti</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>