mdapi/objects/Overview_Budget_per_Anno__c/fields/Anno__c.field-meta.xml
<CustomField>
    <fullName>Anno__c</fullName>
    <label>Anno</label>
    <length>4</length>
    <type>Text</type>
</CustomField>