mdapi/objects/Overview_Budget_per_Anno__c/fields/Budget__c.field-meta.xml
<CustomField>
    <fullName>Budget__c</fullName>
    <label>Budget</label>
    <referenceTo>GiftDesignation</referenceTo>
    <relationshipLabel>Overview Budget per Anno</relationshipLabel>
    <relationshipName>Overview_Budget_per_Anno</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>