mdapi/objects/Overview_Budget_per_Anno__c/fields/Numero_di_Fatture_formula__c.field-meta.xml
<CustomField>
    <fullName>Numero_di_Fatture_formula__c</fullName>
    <formula>Totali_Budget_Anno__r.Numero_di_Fatture__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Numero di Fatture</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>