mdapi/objects/Overview_Budget_per_Anno__c/fields/Numero_Distribuzioni__c.field-meta.xml
<CustomField>
    <fullName>Numero_Distribuzioni__c</fullName>
    <label>Numero Distribuzioni</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>