mdapi/objects/Overview_Budget_per_Anno__c/fields/Numero_Distribuzioni_Formula__c.field-meta.xml
<CustomField>
    <fullName>Numero_Distribuzioni_Formula__c</fullName>
    <formula>Totali_Budget_Anno__r.Numero_Allocazioni_Budget__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Numero Distribuzioni</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>