mdapi/objects/Overview_Budget_per_Anno__c/fields/Numero_Distribuzioni_NON_Pagate__c.field-meta.xml
<CustomField>
    <fullName>Numero_Distribuzioni_NON_Pagate__c</fullName>
    <formula>Totali_Budget_Anno__r.Allocazioni_Budget_NON_Pagate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Numero Distribuzioni NON Pagate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>