mdapi/objects/Overview_Budget_per_Anno__c/fields/Numero_Distribuzioni_NON_Pagate_Static__c.field-meta.xml
<CustomField>
    <fullName>Numero_Distribuzioni_NON_Pagate_Static__c</fullName>
    <label>Numero Distribuzioni NON Pagate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>