mdapi/objects/Overview_Budget_per_Anno__c/fields/Totale_Allocato__c.field-meta.xml
<CustomField>
    <fullName>Totale_Allocato__c</fullName>
    <formula>Totale_Distribuito_Pagato__c +  Totale_Distribuito_NON_Pagato__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Totale Allocato</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>