mdapi/objects/Overview_Budget_per_Anno__c/fields/Totale_Ammontare_Fatture_formula__c.field-meta.xml
<CustomField>
    <fullName>Totale_Ammontare_Fatture_formula__c</fullName>
    <formula>Totali_Budget_Anno__r.Totale_Ammontare_Fatture__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Totale Ammontare Fatture</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>