mdapi/objects/Overview_Budget_per_Anno__c/fields/Totale_Distribuito_Pagato_Formula__c.field-meta.xml
<CustomField>
    <fullName>Totale_Distribuito_Pagato_Formula__c</fullName>
    <formula>Totali_Budget_Anno__r.Totale_Allocato_Budget_Pagato__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Totale Distribuito Pagato</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>