mdapi/objects/Overview_Budget_per_Anno__c/fields/Totale_Numero_Biglietti_formula__c.field-meta.xml
<CustomField>
    <fullName>Totale_Numero_Biglietti_formula__c</fullName>
    <formula>Totali_Budget_Anno__r.Totale_Numero_Biglietti__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Totale Numero Biglietti</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>