mdapi/objects/Overview_Budget_per_Anno__c/fields/Totale_Numero_di_Visite__c.field-meta.xml
<CustomField>
    <fullName>Totale_Numero_di_Visite__c</fullName>
    <label>Totale Numero di Visite</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>